# sfecs

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE.md  README.md
cmake/Modules/: FindSFECS.cmake  FindSFML.cmake
examples/: CMakeLists.txt  HelloWorld.cpp  MainExample.cpp  Proto1.cpp  Proto2.cpp  Proto3.cpp  Proto4.cpp
include/SFECS/: Component.hpp  ComponentMapper.hpp  ComponentType.hpp  ComponentTypeManager.hpp  Components.hpp  Config.hpp  DelayedEntityProcessingSystem.hpp  DelayedEntitySystem.hpp  Entity.hpp  EntityManager.hpp  EntityProcessingSystem.hpp  EntitySystem.hpp  GroupManager.hpp  ImmutableBag.hpp  Manager.hpp  Scene.hpp  Sfecs.hpp  SystemBitManager.hpp  SystemManager.hpp  Systems.hpp  TagManager.hpp  Test.hpp  View.hpp  World.hpp
include/SFECS/Components/: AccelerationComponent.hpp  GravityComponent.hpp  MovementComponent.hpp  PositionComponent.hpp  RenderComponent.hpp  ScriptComponent.hpp
include/SFECS/Systems/: AccelerationSystem.hpp  DestroySystem.hpp  GravitySystem.hpp  MovementSystem.hpp  RenderSystem.hpp  ScriptSystem.hpp
src/SFECS/: Component.cpp  ComponentType.cpp  ComponentTypeManager.cpp  DelayedEntityProcessingSystem.cpp  DelayedEntitySystem.cpp  Entity.cpp  EntityManager.cpp  EntityProcessingSystem.cpp  EntitySystem.cpp  GroupManager.cpp  Manager.cpp  Scene.cpp  SystemBitManager.cpp  SystemManager.cpp  TagManager.cpp  Test.cpp  View.cpp  World.cpp
src/SFECS/Components/: AccelerationComponent.cpp  GravityComponent.cpp  MovementComponent.cpp  PositionComponent.cpp  RenderComponent.cpp  ScriptComponent.cpp
src/SFECS/Systems/: AccelerationSystem.cpp  DestroySystem.cpp  GravitySystem.cpp  MovementSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp
tests/: CMakeLists.txt  EntityTest.cpp  MainTest.cpp  WorldTest.cpp
